[package]
name = "boop"
version = "0.0.2"
authors = ["viri <hi@viri.moe>", "Adam <classygopher@gmail.com>"]
edition = "2018"
description = "Comfortable low-level audio library."
documentation = "https://docs.rs/boop"
readme = "README.md"
# homepage = "https://some.website/boop"
repository = "https://github.com/notviri/boop/"
license = "Zlib"
# keywords = []
# categories = []
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
